discussion/kv_engine/182822/182822_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge commit 'a6922c068' into 'couchbase/master'

Conflict in hash_table.cc (new parameter on StoredValueProxy ctor)

* commit 'a6922c068':
  MB-53922: Remove ~StoredValueProxy

Change-Id: I102b4399edac8b59b947391605c816eac1b09e1f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-11-16 11:43:11.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-16 11:57:07.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42918/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/hash_table.cc:60:30:
error: out-of-line definition of "StoredValueProxy" does not match any declaration in "HashTable::StoredValueProxy"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42918/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21863/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.cc:60:30: error: out-of-line definition of "StoredValueProxy" does not match any declaration in "HashTable::StoredValueProxy" [clang-diagnostic-error]
HashTable::StoredValueProxy::StoredValueProxy(HashBucketLock&& hbl,
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.cc:65:7: error: member initializer "valueStats" does not name a non-static data member or base class [clang-diagnostic-error]
      valueStats(stats) {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.cc:1031:1: error: version control conflict marker in file [clang-diagnostic-error]
<<<<<<< HEAD
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.cc:1032:71: error: no type named "RetSVPTag" in "HashTable::StoredValueProxy" [clang-diagnostic-error]
HashTable::StoredValueProxy HashTable::findForWrite(StoredValueProxy::RetSVPTag,
                                                                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.cc:1036:12: error: no matching constructor for initialization of "HashTable::StoredValueProxy" [clang-diagnostic-error]
    return {std::move(result.lock), result.storedValue, valueStats};
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.h:731:9: note: candidate constructor not viable: requires 2 arguments, but 3 were provided
        StoredValueProxy(HashBucketLock&& hbl, StoredValue* sv);
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.h:734:9: note: candidate constructor not viable: requires single argument "other", but 3 arguments were provided
        StoredValueProxy(const StoredValueProxy& other) = delete;
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.h:738:9: note: candidate constructor not viable: requires 1 argument, but 3 were provided
        StoredValueProxy(StoredValueProxy&&) = default;
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.cc:1440:53: error: too few arguments to function call, expected 2, have 1 [clang-diagnostic-error]
    const auto preProps = valueStats.prologue(&value);
                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.cc:518:1: note: "prologue" declared here
HashTable::Statistics::StoredValueProperties HashTable::Statistics::prologue(
^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21863/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/hash_table.cc:60:30:
error: out-of-line definition of "StoredValueProxy" does not match any declaration in "HashTable::StoredValueProxy" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21863/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51141/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/hash_table.cc(63): error C2511: "HashTable::StoredValueProxy::StoredValueProxy(HashTable::HashBucketLock &&,StoredValue *,HashTable::Statistics &)": overloaded member function not found in "HashTable::StoredValueProxy" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51141/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11679/ : FAILURE

Compile error at [2022-11-16T11:50:02.598Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/hash_table.cc:60:1:
error: no declaration matches ?HashTable::StoredValueProxy::StoredValueProxy(HashTable::HashBucketLock&&, StoredValue*, HashTable::Statistics&)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11679/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23366/ : FAILURE

Compile error at [2022-11-16T11:48:34.254Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master_2/kv_engine/engines/ep/src/hash_table.cc:60:30:
error: out-of-line definition of "StoredValueProxy" does not match any declaration in "HashTable::StoredValueProxy"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23366/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11590/ : FAILURE

Compile error at [2022-11-16T11:45:23.177Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/hash_table.cc:60:30:
error: out-of-line definition of "StoredValueProxy" does not match any declaration in "HashTable::StoredValueProxy"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11590/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24322/ : FAILURE

Compile error at [2022-11-16T11:52:51.444Z] ../kv_engine/engines/ep/src/hash_table.cc:60:1:
error: no declaration matches ?HashTable::StoredValueProxy::StoredValueProxy(HashTable::HashBucketLock&&, StoredValue*, HashTable::Statistics&)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24322/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23907/ : FAILURE

Compile error at [2022-11-16T11:51:30.049Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/hash_table.cc:60:1:
error: no declaration matches ?HashTable::StoredValueProxy::StoredValueProxy(HashTable::HashBucketLock&&, StoredValue*, HashTable::Statistics&)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23907/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32327/ : FAILURE

Compile error at [2022-11-16T11:53:51.819Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/hash_table.cc:60:30:
error: out-of-line definition of "StoredValueProxy" does not match any declaration in "HashTable::StoredValueProxy"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32327/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25156/ : FAILURE

Compile error at [2022-11-16T11:49:02.717Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/hash_table.cc:60:30:
error: out-of-line definition of "StoredValueProxy" does not match any declaration in "HashTable::StoredValueProxy"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25156/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/619/ : FAILURE

Compile error at [2022-11-16T11:46:32.229Z] /home/couchbase/jenkins/workspace/kv_engine.linux-debug_master/kv_engine/engines/ep/src/hash_table.cc:60:1:
error: no declaration matches ?HashTable::StoredValueProxy::StoredValueProxy(HashTable::HashBucketLock&&, StoredValue*, HashTable::Statistics&)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/619/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21217/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
